<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.haitr.login_hbb.RegisterActivity">

    <EditText
        android:id="@+id/edittext_register_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/edittext_register_username"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edittext_register_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/edittext_register_email"
        android:inputType="textEmailAddress"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edittext_register_phonenumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/edittext_register_phonenumber"
        android:inputType="phone"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edittext_register_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/edittext_register_pass"
        android:inputType="textPassword"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edittext_register_repeatpassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/edittext_register_repeatpass"
        android:inputType="textPassword"
        android:singleLine="true" />

    <Button
        android:id="@+id/button_register_createaccount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_create_account" />


</LinearLayout>
